# reverse-depends-ng-poc

./: Cargo.toml  README.md
src/: archive.rs  args.rs  cache.rs  cli.rs  lib.rs  main.rs  output.rs  parsing.rs  platform_info.rs  resolver.rs  system.rs  vendor.rs
src/unit_tests/: args_tests.rs  output_tests.rs  parsing_tests.rs  resolver_tests.rs
