[package]
name = "reverse-depends-ng-poc"
version = "0.1.0"
authors = ["Max Gilmour <max.gilmour@canonical.com>"]
edition = "2024"
description = "List the reverse-dependencies (or build-dependencies) of a package"
readme = "README.md"
homepage = "https://github.com/maxgmr/reverse-depends-ng-poc"
repository = "https://github.com/maxgmr/reverse-depends-ng-poc"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
deb822-fast = "0.2"
flate2 = "1.1"
futures = "0.3"
reqwest = { version = "0.13", default-features = false }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
